feat: Migrate from Create React App to Next.js for security
- Replace Create React App with Next.js 15.5.2
- Eliminate 9 security vulnerabilities from react-scripts
- Reduce dependencies from 18 to 12 packages (-33%)
- Add comprehensive security audit documentation
- Implement API proxy configuration for development
- Create clean project structure with client2 directory
- Backup old React app in client_backup directory
- Test and verify all CRUD operations work correctly

Security improvements:
- 0 vulnerabilities in production and development
- Modern build toolchain with Next.js optimizations
- Cleaner dependency tree and better maintainability

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
-    "client": "cd client && npm start",
-    "build": "cd client && npm run build",
-    "test": "cd client && npm test",
+    "client": "cd client2 && npm run dev",
+    "build": "cd client2 && npm run build",
+    "test": "cd client2 && npm test",
     "install-server": "cd server && npm install",
-    "install-client": "cd client && npm install",
+    "install-client": "cd client2 && npm install",
     "install-all": "npm run install-server && npm run install-client"
   },
   "devDependencies": {
